--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
- {
-   "name": "prob-of-superiority",
-   "version": "0.0.1",
-   "description": "",
-   "private": true,
-   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "devDependencies": {
-     "webpack": "^5.4.0",
-     "webpack-cli": "^4.2.0",
-     "@antv/g2": "4.1.18"
-   }
- }
+{
+  "name": "prob-of-superiority",
+  "version": "0.0.1",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "@antv/g2": "4.1.18"
+  },
+  "dependencies": {
+    "@stdlib/dist-flat": "0.0.94",
+    "@stdlib/dist-tree": "0.0.94"
+  }
+}
