--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@antv/g2": "4.1.18",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "@antv/g2": "4.1.18"
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@stdlib/dist-flat": "0.0.94",
     "@stdlib/dist-stats-base-dists-flat": "0.0.94",
-    "@stdlib/dist-tree": "0.0.94"
+    "@stdlib/dist-tree": "0.0.94",
+    "lodash": "^4.17.21"
   }
 }
